RE #5940  #5959  [Catalog- Generic API ] sorting on nestedEntities doesn't work